# mp2-lab5-tables

./: .gitmodules  Alyaseva_Tables.docx  CMakeLists.txt
google_test/: CMakeLists.txt
include/: polynomial.h  table.h
samples/: main.cpp
tests/: test_table.cpp
